--- a/pulsar-flink/pom.xml
+++ b/pulsar-flink/pom.xml
@@ -42,7 +42,7 @@
 
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-table_${scala.binary.version}</artifactId>
+      <artifactId>flink-table-api-java-bridge_${scala.binary.version}</artifactId>
       <version>${flink.version}</version>
       <scope>provided</scope>
       <!-- Projects depending on this project, won't depend on flink-table. -->
